# SurfSense

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .recurseml.yaml  .secrets.baseline  2FA_IMPLEMENTATION_SUMMARY.md  AGENTS.md  ALISON_GUIDE.md  API_CHANGES.md  CHANGELOG.md  CICD.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  COMMENT_CLEANUP.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NOTES_2025-11-20.md  DOCKER_SETUP.md  Dockerfile.allinone  FEATURE_BRANCH_SUMMARY.md  GITHUB_CONNECTOR_FIX.md  GOOGLE_DRIVE_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_FRONTEND_GUIDE.md  MCP_IMPLEMENTATION.md  MIGRATION_LOCAL_LLM.md  Makefile  NGINX_SESSION_FIX.md  OPTIMIZATION_SUMMARY.txt  PERFORMANCE_OPTIMIZATION_REPORT.md  PRE_COMMIT.md  PROJECT_STATUS.md  PR_DESCRIPTION.md  PUSH_INSTRUCTIONS.md  (+43 more)
apps/api/: .env.example  README.md  harry-potter-db-seed-spells.csv  harry-potter-db-seed-users.csv  package.json  pyproject.toml  requirements.txt  run.py  vercel.json
apps/api/src/: config.py  main.py
apps/api/tests/: test_api.py
surfsense_backend/: .bandit  .dockerignore  .env.example  .gcloudignore  .gitignore  .sops.yaml  AFTER_WORK_FIXES.md  CLAUDE_IMPROVEMENTS.md  CLOUDFLARE_SETUP.md  Dockerfile  OLLAMA_MEMORY_OPTIMIZATION.md  README.md  SECURITY_IMPROVEMENTS.md  TRELLO_TESTS_README.md  alembic.ini  celery_worker.py  draw.py  gateway_runner.py  main.py  migrate_encrypt_api_keys.py  nohup.out  pyproject.toml  pytest.ini  run_trello_tests.py  secrets.enc.yaml  test_chat_rag.py  test_db.py  test_db_sa.py  test_db_sync.py  test_dexscreener_integration.py  test_scraper_api_smoke.py
surfsense_backend/alembic/: env.py
surfsense_backend/alembic/versions/: 0_initial_schema.py  100_add_report_group_id.py  101_add_source_markdown_to_documents.py  102_add_enable_summary_to_connectors.py  102_add_video_llm_id_to_search_space.py  103_add_last_login_to_user.py  104_add_chunks_document_id_index.py  104_add_notification_composite_indexes.py  1053d0947cc1_add_mcp_connector_type.py  105_add_chunks_document_id_index.py  106_add_minimax_to_litellmprovider_enum.py  106_add_platform_web_search.py  107_add_video_presentations_table.py  108_cleanup_electric_sql_artifacts.py  109_add_folders_table.py  109_add_prompts_table.py  109_add_quick_ask_actions_table.py  10_update_chattype_enum_to_qna_report_structure.py  110_add_onedrive_connector_enums.py  110_add_prompts_table.py  111_add_prompts_table.py  112_add_dropbox_connector_enums.py  112_add_is_public_to_prompts.py  112_add_prompt_library_schema.py  113_add_prompt_library_schema.py  113_add_system_prompt_slug_to_prompts.py  113_seed_default_prompts.py  114_seed_default_prompts.py  115_add_page_purchases_table.py  116_create_zero_publication.py  117_add_local_folder_connector_and_versioning.py  117_add_local_folder_sync_and_versioning.py  117_add_vision_llm_id_to_search_spaces.py  117_optimize_zero_publication_column_lists.py  118_add_local_folder_sync_and_versioning.py  119_add_vision_llm_id_to_search_spaces.py  11_add_llm_config_table_and_relationships.py  120_add_vision_llm_configs_table.py  121_add_enable_vision_llm_to_connectors.py  121_add_memory_md_columns.py  (+249 more)
surfsense_backend/app/: app.py  celery_app.py  db.py  exceptions.py  rate_limiter.py  session_events.py  temp_test.py  users.py  zero_publication.py
surfsense_backend/app/agents/: __init__.py
surfsense_backend/app/alison_docs/: classroom_faq.json  projector_issues.md
surfsense_backend/scripts/: check_migration_flow.py  check_zero_publication_bootstrap.py  create_sandbox_snapshot.py  e2e_amazon_scraper.py  e2e_google_maps_deep.py  e2e_google_maps_scraper.py  e2e_google_search.py  e2e_indeed_scraper.py  e2e_instagram_scraper.py  e2e_phase3_crawl_billing.py  e2e_reddit_scraper.py  e2e_tiktok_scrape.py  e2e_walmart_scraper.py  e2e_youtube_scraper.py  probe_mcp_session_lifetime.py  register_webhook.py  revoke_refresh_tokens_cutover.py  scale_google_search.py  seed_surfsense_docs.py  sops_mcp_server.py  stress_google_search.py  update_admin_user.py  verify_chat_image_capability.py  verify_is_public_migration.py
surfsense_backend/tests/: README.md  __init__.py  conftest.py  test_agent_configuration.py  test_blocknote_converter.py  test_celery_tasks.py  test_celery_tasks_comprehensive.py  test_config.py  test_connector_config.py  test_connector_indexers_comprehensive.py  test_connector_service.py  test_connector_service_extended.py  test_db_models.py  test_document_converters.py  test_file_upload_security.py  test_jsonata_transformer.py  test_llm_service.py  test_llm_service_extended.py  test_page_limit_service.py  test_permissions.py  test_rate_limit_dependency.py  test_rbac.py  test_rbac_schemas.py  test_rbac_utils.py  test_retrievers.py  test_routes_documents.py  test_routes_llm_config.py  test_routes_search_spaces.py  test_schemas.py  test_search_spaces_routes.py  test_secrets_loader.py  test_space_sharing.py  test_two_fa_service.py  test_validators.py
surfsense_evals/: .env.example  .gitignore  README.md  pyproject.toml
surfsense_evals/data/: .gitignore
surfsense_evals/reports/: .gitignore
surfsense_evals/scripts/: analyze_failure_timing.py  analyze_failures.py  check_extraction_sizes.py  check_uploaded_status.py  compute_adjusted_accuracy.py  compute_blog_extras.py  compute_post_retry_accuracy.py  download_crag_task3.py  inspect_first30.py  patch_manifest_for_parallel_ingest.py  peek_crag_run.py  peek_disagreements.py  peek_t3_doc_map.py  retry_failed_questions.py  summarise_crag_run.py  summarise_parser_compare_run.py  test_context_overflow_hypothesis.py
surfsense_evals/tests/: conftest.py  test_integration_smoke.py
surfsense_mcp/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
surfsense_mcp/mcp_server/: config.py  selfcheck.py  server.py
surfsense_mcp/tests/: test_auth_headers.py  test_client_errors.py  test_client_params.py  test_get_document_okf.py  test_note_ingestion.py  test_rendering.py  test_request_auth.py  test_workspace_context.py
(+6395 files in other folders)
