[project]
name = "surfsense-mcp"
version = "0.1.0"
description = "MCP server exposing SurfSense scrapers, knowledge base, and workspace tools over the REST API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.scripts]
surfsense-mcp = "mcp_server.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
target-version = "py311"
